--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
       background-image: url('static/jacob-miller-ot5kWZkH97s-unsplash.jpg');
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      background-attachment: scroll;
       text-align: center;
     }
 
