--- a/templates/index.html
+++ b/templates/index.html
@@ -829,10 +829,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183359/ronaldo_d9rzgv.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
@@ -841,10 +838,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183376/final_zoro_bnrkqz.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
@@ -853,10 +847,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183072/naa_ready_insta_reel_gcfqls.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
@@ -865,10 +856,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183456/final_new_avengers_nrwmxr.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
@@ -877,10 +865,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183409/virat_2_jqnekk.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
@@ -889,10 +874,7 @@ body {
         <video 
           preload="metadata" 
           src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183483/random_final_p6ebvu.mp4" 
-          muted 
-          autoplay 
-          loop 
-          playsinline>
+          muted >
         </video>
 
       </div>
