--- a/templates/index.html
+++ b/templates/index.html
@@ -873,7 +873,7 @@ body {
         <img src="static/w.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183483/random_final_p6ebvu.mp4" 
+          src="" 
           muted >
         </video>
 
