--- a/templates/index.html
+++ b/templates/index.html
@@ -873,7 +873,7 @@ body {
         <img src="static/w.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755183434/random_final_bn9vcd.mp4" 
           muted >
         </video>
 
