--- a/templates/index.html
+++ b/templates/index.html
@@ -873,10 +873,11 @@ body {
         <img src="static/w.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755185698/random_final_vqtuaa.mp4" 
-          muted >
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_mp4,f_auto,q_auto/v1755185698/random_final_vqtuaa.mp4" 
+          muted 
+          autoplay 
+          playsinline>
         </video>
-
       </div>
     </div>
   </div>
