--- a/templates/index.html
+++ b/templates/index.html
@@ -871,13 +871,10 @@ body {
       </div>
       <div class="video-card" style="transform: rotateY(300deg) translateZ(500px);">
         <img src="static/w.png" class="video-thumb" />
-        <video 
-          preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755185698/random_final_vqtuaa.mp4" 
-          muted 
-          autoplay 
-          playsinline>
+        <video preload="metadata" muted autoplay playsinline loop>
+          <source src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_mp4,q_auto/v1755185698/random_final_vqtuaa.mp4" type="video/mp4">
         </video>
+
       </div>
     </div>
   </div>
