--- a/templates/index.html
+++ b/templates/index.html
@@ -871,10 +871,11 @@ body {
       </div>
       <div class="video-card" style="transform: rotateY(300deg) translateZ(500px);">
         <img src="static/w.png" class="video-thumb" />
-        <video preload="metadata" muted autoplay playsinline loop>
-          <source src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_mp4,q_auto/v1755185698/random_final_vqtuaa.mp4" type="video/mp4">
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755187038/randomnew_ztkvnj.mp4" 
+          muted >
         </video>
-
       </div>
     </div>
   </div>
