--- a/templates/index.html
+++ b/templates/index.html
@@ -873,7 +873,7 @@ body {
         <img src="static/w.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755187038/randomnew_ztkvnj.mp4" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183072/naa_ready_insta_reel_gcfqls.mp4" 
           muted >
         </video>
       </div>
