--- a/templates/index.html
+++ b/templates/index.html
@@ -869,11 +869,11 @@ body {
         </video>
 
       </div>
-      <div class="video-card" style="transform: rotateY(300deg) translateZ(500px);">
-        <img src="static/w.png" class="video-thumb" />
+      <div class="video-card" style="transform: rotateY(240deg) translateZ(500px);">
+        <img src="static/v.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183072/naa_ready_insta_reel_gcfqls.mp4" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755187038/randomnew_ztkvnj.mp4" 
           muted >
         </video>
       </div>
